# muggled_sam

./: .gitignore  CHANGELOG.md  README.md  convertTarToVideo.py  pyproject.toml  requirements.txt  run_detections.py  run_image.py  run_video.py
.readme_assets/: CHANGELOG.md  video_from_frames.md
experiments/: README.md  block_norm_visualization.py  cross_image_segmentation.py  mask_stability_visualization.py  semantic_similarity.py  video_with_image_priors.py  vit_posenc_visualization.py  window_size_visualization.py
lib/: README.md  coordinate_encoder_model.py  image_encoder_model.py  make_sam.py  make_sam_v1.py  make_sam_v2.py  mask_decoder_model.py  prompt_encoder_model.py  sam_model.py
model_weights/: README.md
muggled_sam/: README.md  make_sam.py  model_typing.py
simple_examples/: README.md  auto_mask_generator.py  encode_image.py  image_detection.py  image_segmentation.py  image_segmentation_batches.py  model_distillation.py  object_detection.py  object_detection_batches.py  object_detection_cross_image.py  speed_benchmarking.py  speed_benchmarking_detection.py  video_segmentation.py  video_segmentation_batches.py  video_segmentation_from_detections.py  video_segmentation_from_mask.py  video_segmentation_multiobj.py  video_segmentation_multiplexed.py  video_segmentation_samurai.py
training/: README.md  distill_image_encoder.py  distill_text_encoder.py  merge_sam3_train_weights.py  merge_trained_weights.py  prune_image_encoder.py  prune_sam3_image_encoder.py  prune_sam3_text_encoder.py  prune_text_encoder.py  run_distill_image_encoder.py  (+1 more)
(+216 files in other folders)
